--- a/tut9.html
+++ b/tut9.html
@@ -7,27 +7,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- external css styling -->
-    <link rel="stylesheet" href="tut1.css">
+    <link rel="stylesheet" href="tut10.css">
     <title>Tutorial 9</title>
+
+
+    <!-- <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script> -->
 </head>
 
-<!-- internal css styling -->
+<!-- internal css styling
 <style>
     p {
         background-color: green;
     }
-</style>
+</style> -->
 
 <body>
     <!-- inline css styling -->
-    <p style="color:red">Hello</p>
+    <!-- <p style="color:red">Hello</p>
     <p id="demo">Lorem ipsum dolor sit amet.</p>
     <p class="demo1">Lorem ipsum dolor sit amet.</p>
 
     <h1>hellohellohellohellohellohello hello hello hello hellohello hello hello hello hello hello hello hello hello hello
 
-    </h1>
+    </h1> -->
+    <!-- <div>
+        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, sequi!</p>
+        <h1>hello</h1>
+    </div>
+    <ion-icon name="trash-outline"></ion-icon>
+    <ion-icon name="close-outline"></ion-icon>
 
+    <ul>
+        <li>cofee</li>
+    </ul> -->
+    <!-- <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">Home</a></li>
+    </ul> -->
+
+    <!-- <div>this is div </div><br>
+    <div id="relative">this is new </div><br><br>
+    <div id="fixed">this is new </div>
+    <br><br><br>
+    <div class="relative">this is new
+        <div class="absoulte">this is new</div>
+    </div> -->
+
+    <!-- <img src="ggg.gif" alt="">
+    <p>Lorem ipsum dolor sit 
+        amet consectetur adipisicing elit. Fugiat provident dolorem deserunt non earum beatae harum ducimus delectus et consequuntur.</p> -->
+
+
+    <!-- <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam libero earum eveniet eos, ad dolorem alias blanditiis nam corrupti temporibus soluta minima et possimus laboriosam repellendus nisi voluptatibus iste laudantium, officiis unde inventore
+        ipsam officia ab suscipit. Earum libero sapiente incidunt fugit dolorem, sequi quam ratione perspiciatis consectetur! Nemo, perspiciatis?</div> -->
+
+    <!-- <p><img src="ggg.gif" alt="">Lorem ipsum dolor sit amet.</p> -->
+
+
+
+
+    <!-- <div>
+        <p>1</p>
+        <p>2</p>
+
+        <section>
+            <p>3</p>
+        </section>
+
+    </div>
+
+    <p>4</p>
+    <p>5</p> -->
+
+
+    <!-- <ul>
+        <li><a href="" class="active">Home</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">Home</a></li>
+    </ul> -->
+
+
+    <!-- <div class="dropdown">
+        <button class="dropbtn">Dropdown</button>
+        <div class="dropdown-content">
+            <a href="">Home</a>
+            <a href="">Home</a>
+            <a href="">Home</a>
+            <a href="">Home</a>
+        </div>
+    </div> -->
+
+
+
+    <p id="rn">Rounded-1</p>
+    <p id="corn">
+        <a href="https://www.google.com">Google</a>
+    </p>
+    <p id="rconr1">Rounded-3</p>
+    <p id="rconr2">Rounded-4</p>
+
+    <img src="1.png" alt="">
+
+    <p id="borderimg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aliquam.</p>
 </body>
 
 </html>
