--- a/tut9.html
+++ b/tut9.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- external css styling -->
-    <link rel="stylesheet" href="tut10.css">
+    <link rel="stylesheet" href="tut11.css">
     <title>Tutorial 9</title>
 
 
@@ -101,7 +101,7 @@
     </div> -->
 
 
-
+    <!-- 
     <p id="rn">Rounded-1</p>
     <p id="corn">
         <a href="https://www.google.com">Google</a>
@@ -111,7 +111,20 @@
 
     <img src="1.png" alt="">
 
-    <p id="borderimg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aliquam.</p>
+    <p id="borderimg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aliquam.</p> -->
+
+
+    <div class="g"></div><br>
+    <div class="g1"></div><br>
+    <div class="g2"></div><br>
+    <div class="g3">
+        <p>Lorem ipsum dolor sit.</p>
+    </div><br>
+    <div class="g4"></div><br>
+    <div class="g5"></div><br>
+    <div class="g6"></div><br>
+
+    <div>this is my text</div>
 </body>
 
 </html>
