--- a/tut3.html
+++ b/tut3.html
@@ -3,62 +3,55 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial 3</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+    <link rel="stylesheet" href="bootstrap_download/css/bootstrap.min.css">
+
+    <title>Document</title>
 </head>
-<!-- <style>
-    a {
-        color: white;
-        border: 2px solid black;
-        background-color: blue;
-        text-decoration: none;
-    }
-</style> -->
 
 <body>
 
-    <!-- <a href="https://www.google.com">Google</a> -->
+    <div class="container mt-3">
+        <!-- <h2>Jumbotron</h2>
+        <div class="mt-4 p-5 bg-primary text-white rounded">
+            <h1>My Teams</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, veniam.</p>
+        </div>
+        <div class="alert alert-success mt-2 fade show">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <strong>Success!</strong> indicates a successful or postive action
+        </div>
 
-    <!-- <p>
-        <a href="#C4">Jump to chapter 4</a><br>
-        <a href="#C10">Jump to chapter 10</a>
-    </p>
-    <h1>Chapter 4</h1>
-    <p>this is chapter 4 content</p>
-    <h1>Chapter 5</h1>
-    <p>this is chapter 4 content</p>
-    <h1>Chapter 6</h1>
-    <p>this is chapter 4 content</p>
-    <h1>Chapter 7</h1>
-    <p>this is chapter 4 content</p>
-    <h1>Chapter 8</h1>
-    <p>this is chapter 4 content</p>
-    <h1>Chapter 9</h1>
-    <p>this is chapter 4 content</p>
-    <h1 id="C10">Chapter 10</h1>
-    <p>this is chapter 4 content</p>
-    <h1 id="C4">Chapter 11</h1>
-    <p>this is chapter 4 content</p>
-    <h1>Chapter 12</h1>
-    <p>this is chapter 4 content</p>
-    <h1>Chapter 13</h1>
-    <p>this is chapter 4 content</p> -->
+        <div class="mt-4">
+            <button type="button" class="btn btn-success" value="Input Button">Button</button>
+            <button type="button" class="btn btn-primary" value="Input Button">Button</button>
+            <button type="button" class="btn btn-danger" value="Input Button">Button</button>
+            <button type="button" class="btn btn-outline-primary ">Button</button>
+            <button type="button" class="btn btn-primary"><span class="spinner-border spinner-border-sm"> </span>Loading...</button>
 
 
-    <!-- <img src="https://th.bing.com/th/id/OIP.FQfyMMSjVR1HvLHFUmU8AwHaE8?pid=ImgDet&rs=1" alt="this is my image" width="30px" height="30px"> -->
 
-    <!-- <img src="#" alt="workplace" usemap="#workmap" width="50" height="50"> -->
-
-    <!-- <map name="workmap">
-        <a href="tut1.html"><img src="images/2.jpeg" alt=""></a>
-    </map> -->
-    <!-- 
-    <p style="color:white">Hello world</p>
-    <img src="https://th.bing.com/th/id/OIP.1YM53mG10H_U25iPjop83QHaEo?pid=ImgDet&rs=1" alt="">
- -->
+            <button class="btn btn-primary">
+                Message <span class="badge bg-danger">4</span>
+            </button>
 
 
+            <div class="progress mt-5">
+                <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" style="width: 70%;">70%</div>
+            </div>
+        </div>
+
+        <div class="spinner-grow text-primary mt-5"></div>
+        <div class="spinner-grow text-success mt-5"></div>
+        <div class="spinner-grow text-danger mt-5"></div> -->
+        <div class="spinner-grow text-warning mt-5"></div>
+        <button type="button" class="btn btn-danger" value="Input Button">Button</button>
+        <button type="button" class="btn btn-outline-primary ">Button</button>
+    </div>
 
 </body>
 
