--- a/tut5.html
+++ b/tut5.html
@@ -3,54 +3,30 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial 5</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <title>tut 5 </title>
 </head>
 
 <body>
-    <!-- <span>hello world</span>
-    <div>hello world</div> -->
 
-    <!-- id: id call only one time ,class: class call always any time -->
-    <!-- #, .  -->
-
-    <!-- <style>
-        #div1 {
-            border: 2px solid black;
-            color: red;
-        }
-        
-        .div2 {
-            border: 2px solid black;
-            color: red;
-        }
-    </style>
-    <div id="div1">
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-    </div>
-
-    <div class="div2">
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
-        <p>hello</p>
+    <!-- <div class="dropdown dropstart">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">DropDown</button>
+        <ul class="dropdown-menu">
+            <li><a href="" class="dropdown-item">Link-1</a></li>
+            <li><a href="" class="dropdown-item active">Link-1</a></li>
+            <li><a href="" class="dropdown-item">Link-1</a></li>
+            <li><a href="" class="dropdown-item">Link-1</a></li>
+        </ul>
     </div> -->
 
-    <!-- <iframe src="tut2.html" width="300" height="300" title="MY Location" style="border:2px solid black"></iframe> -->
-    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53789.94470760702!2d71.51413540992817!3d32.582949702591414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39271820c5ae398d%3A0x93a7da7672fc2613!2sMianwali%2C%20Punjab%2C%20Pakistan!5e0!3m2!1sen!2s!4v1683936129435!5m2!1sen!2s"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
-
-    <!-- <button type="button" onclick="document.getElementById('demo').innerHTML=Date()">Show Date</button>
-    <p id="demo"></p> -->
-
-    <!-- <img src="2.jpeg" alt="">
-    <img src="images/2.jpeg" alt=""> -->
+    <div class="container">
+        <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Ali</button>
+        <div id="demo" class="collpapse">
+            Lorem ipsum dolor sit amet.
+        </div>
+    </div>
 
 </body>
 
