--- a/tut6.html
+++ b/tut6.html
@@ -3,70 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="description" content="Free Web Tutrials">
-    <meta name="author" content="Muhammad Shafa Ullah">
-    <meta http-equiv="refresh" content="30">
-    <title>Tutorial 6</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <title>Document</title>
 </head>
 
 <body>
-    <!-- span, div, form(input) -->
-    <form>
-        <!-- input, label, select, textarea, button, legend, datalist, output, option, optgroup -->
 
-        <!-- pending -->
-
-
-        <!-- input attributes -->
-
-        <!-- button, checkbox, color, date, datetime-local, 
-        email, file, hidden, month, number, password, radio,
-        range, search, submit, tel, text, url, week -->
-
-
-        <input type="text" placeholder="Please Enter Your Name">
-        <input type="button" value="Submit"><br><br>
-        <input type="password"><br><br>
-
-        <input type="reset"><br><br>
-
-        <input type="radio" value="Male" id="male" name="gen"> Male
-        <input type="radio" value="Female" id="female" name="gen"> Female
-
-
-        <br><br>
-        <input type="checkbox">HTML <br>
-        <input type="checkbox">CSS
-        <br><br>
-        <input type="color" value="#ff0000">
-
-        <br><br>
-        <input type="date" min="1979-01-02">
-        <br><br>
-        <input type="date" max="2000-01-02">
-        <br><br>
-        <input type="datetime-local">
-        <br><br>
-        <input type="email" name="" id="">
-        <br><br>
-        <input type="image" src="images/2.jpeg">
-        <br><br>
-        <input type="file" name="" id="">
-        <br><br>
-        <input type="month">
-        <input type="week">
-        <br><br>
-
-        <input type="number" min="5" max="10">
-        <br><br>
-
-        <input type="range">
-        <br><br> 92306-6394961
-        <input type="tel" value="+92" pattern="[0-9]{6}-[0-9]{7}">
-    </form>
 </body>
+<div class="container">
+    <ul class="nav nav-pills justify-content-center">
+        <li class="nav-item">
+            <a href="" class="nav-link active" data-bs-toggle="pill">Home</a>
+        </li>
+        <li class="nav-item">
+            <a href="" class="nav-link" data-bs-toggle="pill">About</a>
+        </li>
+        <li class="nav-item">
+            <a href="" class="nav-link" data-bs-toggle="pill">Contact</a>
+        </li>
+    </ul>
+</div>
 
 </html>
