--- a/tut8.html
+++ b/tut8.html
@@ -3,21 +3,76 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial 8</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <title>Document</title>
 </head>
 
 <body>
-    <canvas id="myCanvas" width="200" height="100" style="border:1px solid black"></canvas>
-    <!-- media -->
-    <video width="400" controls autoplay muted>
-        <source src="https://www.youtube.com/watch?v=x3VCMa9RfMo" type="video/mp4"/>
-    </video>
-    <audio controls muted autoplay>
-        <source src="try2.mp3" type="audio/mpeg"/>
-    </audio>
 
+
+    <form action="">
+
+        <div class="mb-3 mt-3">
+            <label for="email" class="form-label">Email:</label>
+            <input type="email" class="form-control" id="email" name="email">
+            <textarea name="comment" id="comment" cols="30" rows="10" class="form-control"></textarea>
+        </div>
+
+
+        <div class="row">
+            <div class="col">
+                <input type="text" class="form-control">
+            </div>
+            <div class="col">
+                <input type="password" class="form-control">
+            </div>
+            <div class="col">
+                <input type="text" class="form-control">
+            </div>
+            <div class="col">
+                <input type="password" class="form-control">
+            </div>
+        </div>
+
+        <input type="color" class="form-control form-control-color">
+
+        <br>
+
+        <select class="form-select">
+            <option value="">1</option>
+            <option value="">2</option>
+            <option value="">3</option>
+            <option value="">4</option>
+        </select>
+
+
+        <input type="checkbox" class="form-check-input">
+        <input type="checkbox">
+        <input type="radio">
+        <input type="radio" class="form-check-input">
+        <input type="range" class="form-range">
+        <input type="range">
+
+
+        <div class="input-group">
+            <span class="input-group-text">@</span>
+            <input type="text" class="form-control">
+        </div>
+    </form>
+
+
+
+    <form class="was-validated">
+        <div class="mb-3 mt-3">
+            <input type="text" class="form-control" id="uname" name="uname" required>
+            <div class="valid-feedback">Valid</div>
+            <div class="invalid-feedback">Please fill out this field</div>
+        </div>
+    </form>
 </body>
 
 </html>
